--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-olivia
+Olivia
+var body=1;
+var eyes=2;
+var legs=2;
+var arms=2;
+var ears=2;
+var hair=100000000;
+var nose=1;
+var foot=2;
+foot=1;
+var hands=2;
+var x=100;
+var y=100;
