--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 
 "<canvas id = "ctx" width = "700" height="500" style="border:1px solid #000000;"></canvas>
 </script>
+var canv=document.getElementryById("ctx";
+var ctx=canv.getContext("2d')
+ctx.fillRect();
 ctx.anc(100,100,20,0,360);
